--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ a {
     font-size: 2.4rem;
     text-align: center;
     color: black;
-    background-image: url("head.jpg");
+    background-image: url("images/head.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
