--- a/style.css
+++ b/style.css
@@ -137,6 +137,119 @@ h5 {
 
 }
 
+.feedbackContainer{
+    background: #fff;
+    opacity: 10;
+    margin-top: 10%;
+    margin-bottom: 3%;
+    margin-left: 8%;
+    margin-right: 8%;
+    box-shadow: #666;
+    border-radius: 2rem;
+}
+
+
+.feedbackContainer .data{
+    width:30%;
+    padding:0.2rem 0;
+    margin:1rem 0;
+    margin-left: 2%;
+    border: none;
+    border-radius: .2rem;
+    border-bottom: .2rem solid #888;
+    font-size: 1.1rem;
+    color:#444;
+    text-transform: none;
+    cursor:text;
+}
+.feedbackContainer .data2{
+    margin-left: 2%;
+    margin-top: 1rem;
+}
+
+.feedbackContainer .mygender{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.feedbackContainer .rating{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.feedbackContainer .mygender label{
+    margin-left: 2%;
+    color: #555;
+}
+.feedbackContainer .calendar label{
+    margin-left: 2%;
+    color: #555;
+}
+.feedbackContainer .syllabus label{
+    margin-left: 2%;
+    color: #555;
+    margin-top: 1rem;
+}
+.feedbackContainer .rating input{
+    margin-left: 2%;
+    color: #555;
+    margin-top: 5px;
+}
+
+.feedbackContainer .formDetails input:focus{
+    outline:0;
+}
+
+.feedbackImage{
+    text-align: center;
+}
+
+.feedbackImage img{
+    border-radius: 10rem;
+    width: 20%;
+    margin-top: -5%;
+}
+
+.feedbackContainer form{
+    padding: 4%;
+    
+}
+
+.feedbackContainer form .row{
+    margin-bottom: -3%;
+}
+
+.feedbackContainer form h2{
+    margin-bottom: 7%;
+    margin-top: -5%;
+    text-align: center;
+    color: #B088F9;
+    font-size: 50px;
+}
+
+.feedbackContainer .btn{
+    width: 20%;
+    height: 5%;
+    border: none;
+    border-radius: 2rem;
+    padding: 1.5%;
+    margin-left: 2%;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    font-size: 15px;
+    background: #777;
+    color: #fff;
+    cursor: pointer;
+}
+
+.feedbackContainer .row h2{
+    margin-left: 2%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #777;
+    font-size: 1rem;
+    text-align: left;
+}
+
 #contact {
     background-color: #B088F9;
     margin: 0;
@@ -280,7 +393,7 @@ nav ul li:hover {
     display: flex;
 }
 
-.feedbackpara {}
+/* .feedbackpara {} */
 
 .copyright {
     background-color: #B088F9;
