--- a/internship platform/section1style.css
+++ b/internship platform/section1style.css
@@ -1,12 +1,13 @@
 body{
     font-family: 'Reem Kufi', sans-serif;
+    margin: 0;
+    letter-spacing: 2px;
     
 }
 #section1{
     background-color: #B088F9;
     display: flex;
-    width: 90%;
-    margin: auto;
+    /* width: 90%; */
     padding: 0;
     color: white;
    
@@ -35,17 +36,33 @@ body{
     margin-top: 1em;
     padding: 1em;
     border-radius: 10px;
-    border: none;
+    /* border: none; */
     font-family: 'Reem Kufi', sans-serif;
+    font-size: .95rem;
 }
+.btn{
+    cursor: pointer;
+    border:solid 1px #fff;
+    background-color: #B088F9;
+    color: white;
+
+}
+.btn:hover{
+    border:1px solid #B088F9;
+    background-color: white;
+    color: #B088F9;
+}
+
+
 .form_container p{
     margin-bottom: 0;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     margin-top: 0;
+    color: rgba(255, 255, 255, 0.815);
 }
 .form_container h1{
     margin: 0.3em 0;
-    font-size: 3rem;
+    font-size: 3.2rem;
 }
 #image{
     width: 50%;
