--- a/internship platform/section1style.css
+++ b/internship platform/section1style.css
@@ -21,6 +21,7 @@ body{
     width: 80%;
     margin: auto;
     text-align: start;
+    padding-bottom: 1em;
 }
 #form input{
     background-color: transparent;
@@ -80,4 +81,24 @@ body{
     left: -2px;
     top: -1px;
     padding: 8px 9px;
+}
+
+@media (max-width: 896px){
+    #section1{
+        flex-direction: column;
+
+    }
+    #form{
+        width: 100%;
+    }
+    #image{
+        order: -1;
+        width: 100%;
+    }
+    #image img{
+        width: 100%;
+        height: 100%;
+    }
+    
+
 }
