--- a/internship platform/index1.css
+++ b/internship platform/index1.css
@@ -139,6 +139,14 @@ nav #icon{
 
 }
 
+@media (max-width: 480px){
+  .right_sec li{
+    margin:0 .2rem ;
+    display: inline-block;
+    font-size: 15px;
+  }
+  
+}
 
 
 body{
@@ -246,6 +254,162 @@ body{
   }
   
 
+}
+
+h2{
+  text-align: center;
+  font-size: 40px;
+}
+
+.img-area{
+  display: flex;
+}
+
+.container2 {
+  position: relative;
+  width: 33%;
+  justify-content: space-evenly;
+  text-align: center;
+  
+}
+
+.image {
+  /* display:flex; */
+  width: 70%;
+  height: 20rem;
+}
+
+.overlay {
+position: absolute;
+top: 0;
+right: 0;
+bottom: 0;
+left: 4.7rem;
+height: 20rem;
+width: 70%;
+opacity: 0;
+transition: .5s ease;
+background-color: #B088F9;
+}
+
+.container2:hover .overlay {
+opacity: 0.8;
+}
+
+.text h3{
+color: white;
+font-size: 30px;
+position: absolute;
+top: 10%;
+left: 50%;
+-webkit-transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%);
+text-align: center;
+}
+.text h5{
+color: white;
+font-size: 20px;
+position: absolute;
+color: rgb(13, 156, 13);
+top: 50%;
+left: 50%;
+-webkit-transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%);
+text-align: center;
+opacity: 1;
+}
+.text p{
+color: white;
+font-size: 20px;
+position: absolute;
+top: 80%;
+left: 50%;
+-webkit-transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%);
+text-align: center;
+}
+
+@media screen and (max-width:900px) {
+  h2{
+    text-align: center;
+    font-size: 30px;
+  }
+  
+  .img-area{
+    display: inline-block;
+  }
+  
+  .container2 {
+    position: relative;
+    width: 80%;
+    text-align: center;
+  }
+  
+  .image {
+    /* display:flex; */
+    align-content: center;
+    width: 100%;
+    height: 20%;
+    text-align: center;
+    margin:2% 0;
+  }
+  
+  .overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #B088F9;
+  }
+  
+  .container2:hover .overlay {
+  opacity: 0.8;
+  }
+  
+  .text h3{
+  color: white;
+  font-size: 30px;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  }
+  .text h5{
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  color: rgb(13, 156, 13);
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  opacity: 1;
+  }
+  .text p{
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  }
+  
 }
 
   .team{
