--- a/Training Website/style.css
+++ b/Training Website/style.css
@@ -140,14 +140,19 @@ h5 {
 .feedbackContainer{
     background: #fff;
     opacity: 10;
-    margin-top: 10%;
+    /* margin-top: 10%;
     margin-bottom: 3%;
     margin-left: 8%;
-    margin-right: 8%;
+    margin-right: 8%; */
     box-shadow: #666;
     border-radius: 2rem;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
+.row{
+}
 
 .feedbackContainer .data{
     width:30%;
@@ -216,6 +221,7 @@ h5 {
 
 .feedbackContainer form .row{
     margin-bottom: -3%;
+    
 }
 
 .feedbackContainer form h2{
