--- a/internship platform/index1.css
+++ b/internship platform/index1.css
@@ -247,7 +247,7 @@ input[type=text]:focus, input[type=password]:focus {
   outline: none;
 }
 
-.button {
+.button{
   background-color: #04AA6D;
   color: white;
   padding: 14px 20px;
@@ -271,7 +271,16 @@ input[type=text]:focus, input[type=password]:focus {
   float: left;
   width: 50%;
 }
-
+.signupbtn{
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  /* margin: 8px 0; */
+  border: none;
+  cursor: pointer;
+  /* width: 50%; */
+  opacity: 0.9;
+}
 .containers {
   padding: 16px;
 }
