--- a/internship platform/hover effect/hover.css
+++ b/internship platform/hover effect/hover.css
@@ -15,6 +15,7 @@ body{
   width: 1100px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 
 }
 .img-container .img-box{
@@ -45,7 +46,7 @@ body{
   width: 100%;
   height: 100%;
   z-index: 1;
-  background: linear-gradient(180deg, #fff, #52006A);
+  background: linear-gradient(180deg, #fff, #fff);
   mix-blend-mode: multiply;
   opacity: 0;
   transition: 0.5s;
