--- a/internship platform/index1.css
+++ b/internship platform/index1.css
@@ -541,25 +541,26 @@ h2{
 }
 
 .container2 {
+  display: flex;
   position: relative;
   width: 33%;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
   text-align: center;
+  justify-content: center;
   
 }
 
 .image {
-  /* display:flex; */
+  
   width: 70%;
-  height: 20rem;
+  height: 20rem; 
 }
 
 .overlay {
-position: absolute;
-top: 0;
-right: 0;
-bottom: 0;
-left: 4.7rem;
+  position: absolute;
+  text-align: center;
+  justify-content: center;
+
 height: 20rem;
 width: 70%;
 opacity: 0;
@@ -692,32 +693,97 @@ text-align: center;
   margin:5rem 0 0 0;
   }  
 
-  .row {
-    display: -ms-flexbox; 
+  .img-container{
+    margin:2rem 0;
+    position: relative;
     display: flex;
-    -ms-flex-wrap: wrap;
+    width: 100%;
     flex-wrap: wrap;
-    padding: 0 4px;
-   margin:0 5em;
+    justify-content: space-evenly;
+  
+  }
+  .img-container .img-box{
+    position: relative;
+    width: 275px;
+    height: 275px;
+    overflow: hidden;
+    transition: 0.5s;
+  
   }
   
-  .column {
-    -ms-flex: 25%; 
-    flex: 25%;
-    padding: 0 4px;
+  .img-container .img-box:hover{
+    z-index: 1;
+    transform: scale(1.25);
+    box-shadow: 0 25px 40px rgba(0, 0, 0, 0.5);
+  
+  }
+  .img-container .img-box .imagesss{
+    position: absolute; 
+    top: 0;left: 0;
+    width: 100%;height: 100%;
+  }
+  .img-container .img-box .imagesss::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: linear-gradient(180deg, #fff, #000000d0);
+    mix-blend-mode: multiply;
+    opacity: 0;
+    transition: 0.5s;
+  }
+  .img-container .img-box:hover .imagesss::before{
+    opacity: 1;
+  }
+  .img-container .img-box .imagesss img{
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  
+  }
+  .img-container .img-box .img-content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    padding: 20px;
+    align-items:center;
   }
   
-  @media screen and (max-width:900px){
-      .column{
-          -ms-flex:50%;
-          flex:50%;
-      }
+  .img-container .img-box .img-content h2{
+    color: #fff;
+    transition: 0.5s;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+    font-size: 20px;
+    transform: translateY(200px);
+  }
+  .img-container .img-box:hover .img-content h2{
+    transform: translateY(0);
+    transition-delay: 0.6s;
+  
+  }
+  .img-container .img-box .img-content p{
+    color: #fff;
+    transform: translateY(200px);
+    transition: 0.5s;
+    font-size: 14px;
+  
+  }
+  .img-container .img-box:hover .img-content p{
+    transform: translateY(0);
+    transition-delay: 0.7s;
   }
 
-  .column img {
-    margin-top: 8px;
-    vertical-align: middle;
-  }
 
   #myBtn {
     display: none;
