--- a/internship platform/index1.css
+++ b/internship platform/index1.css
@@ -41,9 +41,10 @@ nav a{
   padding: 7px 20px;
   border-radius: 3px;
 }
-.active a:hover{
-  text-decoration: underline;
-  
+.active , a:hover{
+  /* text-decoration: underline; */
+  background-color: #fff;
+  color: #B088F9;
   transition: .5s;
 }
 nav #icon{
