--- a/internship platform/index1.css
+++ b/internship platform/index1.css
@@ -1013,7 +1013,7 @@ nav ul li:hover {
   margin:0 1rem;
 }
 
-footer{  
+/* footer{  
   position: relative;
   bottom: 0px;
   width: 100%;
@@ -1176,4 +1176,70 @@ footer{
   .container2{
     margin: auto;
   }
+} */
+
+
+/*footer*/
+
+.footer1{
+  display:flex;
+  width:100%;
+  height:30%;
+  background-color: #B088F9;
+  color: #fff;
+  justify-content: center;
+  flex-wrap: wrap;
+  /* text-align: center; */
+  /* line-height: 25px; */
+}
+
+.sec1{
+  width:22%;
+  padding: 1rem;
+}
+
+.sec1 > h2{
+  justify-content: center;
+  text-align: center;
+  font-size: 23px;
+  padding-bottom: 1rem;
+}
+.sec1 >p , a , address{
+  font-size:15px;
+  text-decoration: none;
+  color: #fff;
+}
+input{
+  width: 100%;
+  text-align: center;
+}
+.submit{
+  background-color: #B088F9;
+  padding:.5rem 1rem ;
+  border-radius: 30px;
+  border-style: solid;
+  border-color: #fff;
+  color: #fff;
+  /* margin:1rem 0; */
+  width: 100%;
+  font-size: medium;
+
+}
+
+.submit:hover{
+  background-color: #fff;
+  color: #B088F9;
+}
+@media (max-width:900px) {
+  .footer1{
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  
+  .sec1{
+    width:100%;
+   
+  }
+  
 }
