--- a/internship platform/index1.css
+++ b/internship platform/index1.css
@@ -1,10 +1,10 @@
 * {
     box-sizing: border-box;
-    font-family: 'Reem Kufi', sans-serif;
+    font-family: 'Cairo', sans-serif;
   }
   
   body{
-    font-family: 'Reem Kufi', sans-serif;
+    font-family: 'Cairo', sans-serif;
     margin: 0;
     letter-spacing: 2px;
     padding: 0;
