--- a/Training Website/style.css
+++ b/Training Website/style.css
@@ -79,13 +79,16 @@ h2 {
     top: 0px;
     margin: 0;
 }
-
+#course{
+    background-color: rgb(228, 227, 227);
+}
 #courses {
    display: flex;
    flex-direction: column;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 29px;
-    margin: 4%;
+    padding: 4%;
+    
 }
 .course-split{
    display: flex;;
@@ -137,24 +140,35 @@ h5 {
 
 }
 
-.feedbackContainer{
-    background: #fff;
-    opacity: 10;
-    /* margin-top: 10%;
-    margin-bottom: 3%;
-    margin-left: 8%;
-    margin-right: 8%; */
-    box-shadow: #666;
-    border-radius: 2rem;
+#feedback{
+    background-color: #fff;
+    width:100%;
+    height:auto;
+    /* align-items: center; */
+}
+
+.container3{
+    border: solid 2px #ccc;
+    height:100%;
+    width:90%;
     display:flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
-.row{
+.right_sec{
+    width:60%;
 }
 
-.feedbackContainer .data{
+
+.right_sec >img{
+    width:100%;
+}
+
+.left_sec{
+    width:40%;
+}
+/* eedbackContainer .data{
     width:30%;
     padding:0.2rem 0;
     margin:1rem 0;
@@ -254,7 +268,7 @@ h5 {
     color: #777;
     font-size: 1rem;
     text-align: left;
-}
+} */
 
 #contact {
     background-color: #B088F9;
