--- a/internship platform/index1.css
+++ b/internship platform/index1.css
@@ -13,141 +13,94 @@
   list-style: none;
   box-sizing: border-box; 
 }
-
-.container{
-  display: flex;
-  
-}
-
+/*nav bar*/
 nav{
-  margin: 0;
-  height: 4rem;
-  width: 50%;
-  background-color:#B088F9;
+  height:80px;
+  width:50%;
+  background:#B088F9; 
 }
+
 nav ul{
+  display:inline-flex;
+  flex-wrap: wrap;
   float: left;
-  padding-left:2rem;
+  list-style: none;
+  margin: 8px 0;
+  line-height: 50px;
 }
-nav li{
-  display: inline-block;
-  margin: 0rem 0;
-  /* line-height: 50px; */
+nav ul li{
+  margin:5 0px;
 }
-nav a{
-  color: white;
-  font-size: 20px;
-  border: 1px solid transparent;
-  padding: 7px 20px;
-  border-radius: 3px;
-}
-.active , a:hover{
-  /* text-decoration: underline; */
-  background-color: #fff;
-  color: #B088F9;
-  transition: .5s;
-}
-nav #icon{
-  color: white;
-  font-size:25px ;
-  line-height: 70px;
-  float: left;
-  margin-left: 40px;
-  cursor: pointer;
-  display: none ;
-}
-.right_sec{
-  
-  width: 50%;
-}
-.right_sec ul {
-  float:right;
-}
-.right_sec a{
+nav ul li a{
+  color:white;
   text-decoration: none;
-  color:#B088F9;
-}
-.right_sec a:hover{
-  text-decoration: underline;
-}
-.right_sec li{
-  margin:0rem 2rem;
-  display: inline-block;
+  margin-left: 10px;
   font-size: 20px;
+  font-weight: 500;
+  padding:8px 15px;
+  border-radius: 30px;
+  letter-spacing:1px;
+  border:1.5px solid transparent;
+  transition:all 0.3s ease;
+}
+nav ul li a.active,
+nav ul li a:hover{
+  background-color: white;
+  color: #B088F9;
+}
+nav .menu-btn i{
+  color:#fff;
+  font-size:22px;
+  cursor: pointer;
+  display:none;
+}
+input[type="checkbox"]{
+  display:none;
 }
 
-
-
-
-
-@media (max-width: 1048px){
-  nav ul{
-    margin-left: 20px ;
-  }
-  nav a{
-    font-size: 17px;
-  }
-}
-@media (max-width: 896px){
-  nav #icon{
-    display: block;
-  }
+@media (max-width:1000px){
   nav{
-    width:100%;
+    padding:0 40px 0px 50px;
+  }
+}
+@media (max-width:920px){
+  nav .menu-btn i{
+    display:block;
+  }
+  #click:Checked ~ .menu-btn i:before{
+    content:'\f00d';
   }
   nav ul{
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background-color:#B088F9;
-    top: 100px;
-    right: -100%;
-    text-align: center;
-    transition: all .5s;
-  }
-  nav li{
-    display: block;
-    margin: 50px 0;
-    /* line-height: 30px ; */
-  }
-  nav a{
-    font-size: 20px;
-  }
-  a.active,a:hover{
-    border: none;
-    color: #B088F9;
-  }
-  nav ul.show{
-    right: 0;
-  }
-  .right_sec{
-    background-color: #B088F9;
-    color:white;
+    position:fixed;
+    top:80px;
+    left:-100%;
+    background:#B088F9;
+    height:100vh;
     width:100%;
+    text-align: center;
+    z-index:10;
+    display:block;
+    transition:all 0.3s ease;
   }
-  .right_sec ul {
-    float:right;
+  #click:Checked ~ ul {
+    left:0px;
   }
-  .right_sec li{
-    margin:0 1rem ;
-    display: inline-block;
-    font-size: 17px;
+  nav ul li{
+    width:100%;
+    margin:40px 0;
   }
-  .right_sec a{
-    text-decoration: none;
-    color:white;
+  nav ul li a{
+    width:100%;
+    margin-left:-100%;
+    display:block;
+    font-size: 20px;
+    transition:0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
-
+  #click:Checked ~ ul li a{
+    margin-left:0px;
+  }
 }
 
-@media (max-width: 480px){
-  .right_sec li{
-    margin:0 .2rem ;
-    display: inline-block;
-    font-size: 15px;
-  }
-  
-}
 /*LOGIN FORM STYLES  */
 /*VARIABLES used for signin and signup */
 :root{
@@ -209,11 +162,10 @@ img{
   background: #fff;
   padding: 10px 20px;
   font-size: 20px;
-  
   color: #3498db;
   cursor: pointer;
   position: absolute;
-  top: 20px;
+  top: 5px;
   right: 10px;
 }
  .btn-show:hover{
@@ -588,7 +540,7 @@ text-align: center;
 color: white;
 font-size: 20px;
 position: absolute;
-color: rgb(13, 156, 13);
+/*color: rgb(13, 156, 13);*/
 top: 50%;
 left: 50%;
 -webkit-transform: translate(-50%, -50%);
@@ -599,7 +551,7 @@ opacity: 1;
 }
 .text p{
 color: white;
-font-size: 20px;
+font-size: 19px;
 position: absolute;
 top: 80%;
 left: 50%;
