--- a/internship platform/index1.css
+++ b/internship platform/index1.css
@@ -992,17 +992,17 @@ nav ul li:hover {
   padding-bottom: 1rem;
  }
 .sec1 >p , a , address{
-  font-size:15px;
+  font-size:larger;
   text-decoration: none;
   color: #fff;
 }
 .sec1 .content .fas {
-   font-size: 1rem;
+   font-size: 1.5rem;
   background-color: #B088F9;
   color: #fff;
-  height: 30px;
-  width: 30px;
-  line-height: 30px;
+  height: 35px;
+  width: 35px;
+  line-height: 35px;
   text-align: center;
   border-radius: 50%;
   transition: 0.3s;
@@ -1012,16 +1012,20 @@ nav ul li:hover {
   background-color: #fff;
   color: #B088F9;
 }
+.sec1 .content .text{
+  font-size: larger;
+}
 .sec1 .content .social a span{
-   height: 30px;
-  width: 30px;
+   height: 35px;
+  width: 35px;
   color: #fff;
   background-color: #B088F9;
-  line-height: 30px;
+  line-height: 35px;
   text-align: center;
-  font-size: 15px;
+  font-size: 30px;
   border-radius: 5px;
   transition: 0.3s;
+  margin-left: 5px;
 }
  .sec1 .content .social a span:hover{
   background-color: #fff;
@@ -1030,6 +1034,7 @@ nav ul li:hover {
 input{
   width: 100%;
   text-align: center;
+  border-radius: 7px;
 }
 .submit{
   background-color: #B088F9;
